# random-junk

./: .gitignore  README.md  interestingpython.md  pkglist.txt
asm/: .gitignore  brainf.asm  entrance.asm  iicalc.asm  max_heap.asm  num_print.asm  print_number_macro.asm  robux.asm  web_server.asm
asm/asm_web/: README.md  web_server.asm  web_server_better.asm
asm/asm_web/pages/: index.html
asm/asm_web/pages/super/: index.html
asm/range_print/: README.md  entrance.asm  generate_data.py  short_entrance.asm
bash/: capslock_mute.sh  g++++++++++++++++++++++++++++++++++++++++++++++++++++++++  gdbinit_toggle.sh  lockdown_browser.sh  updateatom.sh  v4l2.txt
c/: find-largest-commit.c  robux.c
c/advent2/: README.md  day01.c
c/max_heap/: .gitignore  max_heap.c  max_heap.h
cobol/: comptest.cob  hello.cob  rock  rock-paper-scissors.cob
cpp/: credit_card.cpp  robux.cpp  starcross.cpp
cpp/frenchiii/: .gitignore  LICENSE  Makefile  README.md  frenchiii.cpp  frenchiii_enemies.hpp  utilities.hpp
iicalc-hooks/: pre-commit
java/: JavaShell.java  ListDir.java  compile.sh  javashell.java  listdir.java
latex/: bibliography.bib  linux_essay.tex
markdown/: arch_for_beginners.md  bit_storage.md  cs149.md  programming.md
powershell/: windows_config.ps1
python/: .gitignore  batch_audio_metadata.py  block.py  brainf.py  caffine_stats.py  count_git_contribs.py  dvd_transcode.py  get_all_steam_game_logos.py  getkeypress.py  input_timeout.py  interestingpython.md  largest_odd.py  parse_shell_instructions.py  password_type_test.py  recursive-matching.py  spotify_blend_harvester.py  squares.py  steam_profile_compat_checker.py  sub_int.py  superrandom.py  updatediscord  wildcard_matching.py
python/aoc23/day1/: 2.py  one.py  two.py
python/aoc23/day2/: one.py  test.py  two.py
python/aoc23/day3/: one.py  test.txt
python/englang/: .gitignore  grammar.txt  lexer.py  main.py  test  test.c  tokens.py  transpiler.py
python/face_timelapse/: .gitignore  face_timelapse.py  script.py  selectinwindow.py
python/leetcode/: 1.py  1287.py  1323.py  1464.py  1582.py  1688.py  1903.py  191.py  2482.py  2706.py  43.py  606.py  678.py  867.py  94.py
python/steam_profile_compat_checker/: main.py  main.tcss  pyproject.toml
python/submithomework/: .gitignore  README.md  gdrive.py  requirements.txt  submithw.py
rust/aoc2022/day1/pt1/src/: main.rs
rust/aoc2022/day1/pt2/src/: main.rs
rust/arch_benchmark/: Cargo.toml  README.md  build.sh
rust/arch_benchmark/src/: main.rs
rust/brainf/: Cargo.toml
rust/brainf/.cargo/: config
rust/brainf/src/: cells.rs  main.rs  runner.rs
rust/brainf/test_programs/: hello_world.bf
rust/encrypt-file/: Cargo.toml
rust/encrypt-file/src/: main.rs  me.pgp
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hangman/: Cargo.toml
rust/hangman/src/: hangman_generator.rs  main.rs  words.txt
rust/keylogger/: Cargo.toml  README.md  fuzzy
rust/keylogger/src/: main.rs
rust/match_test/: Cargo.toml
rust/match_test/src/: main.rs
rust/randfacts/: Cargo.toml
rust/randfacts/src/: lib.rs  main.rs  safe.txt
rust/shuttle-cch23/: Cargo.toml
rust/shuttle-cch23/src/: day0.rs  day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day19.rs  day4.rs  day6.rs  day7.rs  day8.rs  main.rs
rust/shuttle-cch23/templates/: rendering.html.hbs
rust/shuttlings-cch24/: Cargo.toml  Shuttle.toml
rust/shuttlings-cch24/migrations/: 0001_init.sql
rust/shuttlings-cch24/src/: day01.rs  day02.rs  day05.rs  day09.rs  day12.rs  day16.rs  day19.rs  day23.rs  main.rs
rust/structs_test/: Cargo.toml
rust/structs_test/src/: main.rs
shakespeare/: a.spl
shuttle-cch23/: Cargo.toml
shuttle-cch23/src/: main.rs
typst/: apa.typ
