[tool.poetry]
name = "steam-profile-compat-checker"
version = "0.1.0"
description = "Check the proton compatibility of all the games in a user's profile"
authors = ["TabulateJarl8 <tabulatejarl8@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.44.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.2.1"
black-with-tabs = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
