[package]
name = "encrypt-file"
version = "0.1.0"
edition = "2021"
description = "Utility for sending me an encrypted file encrypted via PGP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
eframe = "0.25.0"
egui = "0.25.0"
rfd = "0.13.0"
sequoia-openpgp = "1.17.0"

[profile.release]
strip = true
opt-level = "z"
lto = true