[package]
name = "encrypt-file"
version = "0.1.0"
edition = "2021"
description = "Utility for sending me an encrypted file encrypted via PGP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
eframe = "0.26.2"
egui = "0.26.2"
rfd = "0.14.0"

[target.'cfg(not(windows))'.dependencies]
sequoia-openpgp = "1.17.0"

[target.'cfg(windows)'.dependencies]
sequoia-openpgp = { version = "1.17.0", default-features = false, features = ["compression", "crypto-cng"] }

[profile.release]
strip = true
opt-level = "z"
lto = true