[package]
name = "cch23-tabulatejarl8"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
fancy-regex = "0.12.0"
image = { version = "0.24.7", default-features = false, features = ["png"] }
reqwest = { version = "0.11.22", features = ["json"] }
rocket = {version = "0.5.0", features = ["json"]}
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
