[package]
name = "cch23-tabulatejarl8"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std", "js-sys"] }
fancy-regex = "0.12.0"
image = { version = "0.24.7", default-features = false, features = ["png"] }
reqwest = { version = "0.11.22", features = ["json"] }
rocket = {version = "0.5.0", features = ["json"]}
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
ulid = "1.1.0"
uuid = { version = "1.6.1", features = ["v7", "v4"] }
