[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["query", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
cargo-manifest = "0.18.0"
html-escape = "0.2.13"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-axum = "0.51.0"
shuttle-runtime = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
tokio = "1.28.2"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
